<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Send new number</string>

    <!-- Menu -->
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <!-- Main -->
    <string name="contact_list">Empty List</string>
    <string name="next_button_title">Next</string>
    <string name="reload_button_title">Reload</string>
    <string name="checkbox_title">Only mobile</string>
    <string name="filter_text">Only numbers that start with</string>
    <string name="name_filter_text">Only names that contain</string>

    <!-- Send -->
    <string name="title_activity_send">Send</string>
    <string name="content_edit_message">Hello, \nmy new number is +49 12345678 \nname</string>
    <string name="send_button_title">Send</string>
    <string name="finish_button_title">Done</string>
    <string name="check_box_database_title">Add to Database</string>
    <string name="content_sleep_time">Set the delay between messages (ms)</string>
    <string name="content_counter">0</string>
    <string name="sent_count">sent: 0/0\ndelivered: 0/0</string>
    	<!-- Toasts -->
    <string name="no_message_entered">No message entered</string>
    <string name="no_time">Invalid sleep time entered</string>
    <string name="counter_sent">sent:</string>
    <string name="counter_delivered">delivered:</string>
    <string name="sms_added_to_database">Message added to </string> <!-- space in the end is important! -->
    <string name="all_sms_added_to_database">All SMS added to database</string>
    <string name="sms_sent">SMS sent</string>
    <string name="sms_generic_failure">Generic failure</string>
    <string name="sms_no_service">No service</string>
    <string name="sms_null_pdu">Null PDU</string>
    <string name="sms_radio_off">Radio is offline</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_failed_delivery">SMS not delivered</string>
    
    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="credits_code">Robin Morawetz (Code) \nhttps://github.com/Rdlgrmpf" \n\nhttp://forum.xda-developers.com/member.php?u=3626662</string>
    <string name="credits_graphics">Daniel Seidel (Graphics) \nhttps://github.com/speedydaniel \n\nhttp://forum.xda-developers.com/member.php?u=4307243</string>
    <string name="credits_translations">Translations:\nFrench: Pnoire\n</string>
    <string name="back_button_title">Back</string>
    
    <!-- Help -->
    <string name="title_activity_help">Help</string>
    <string name="content_help">Basic Instruction:\n\n1.Select the numbers by (un)checking \"Only mobile\" and/or applying filters\n2. Filters are separated by a space
        \n3. If you change anything, hit \"Reload\"\n4. ???\n5. Profit! (Hit \"Next\")\n\nExample of a valid number filter:\n+49 0049 0038\nLocal numbers(neither beginning with
        + nor 00 are ALWAYS included)\n\nExample of a valid name filter:\nRobin mo han\n\nMore: https://github.com/Rdlgrmpf/SendNewNumber/wiki/Help</string>

</resources>